--- a/config/samples/chaos_v1beta1_disruption.yaml
+++ b/config/samples/chaos_v1beta1_disruption.yaml
@@ -21,3 +21,5 @@ spec:
     delay: 1000 # delay in ms
     hosts: # desination hosts to add latency to
       - 10.0.0.0/8
+  nodeFailure: # node kernel panic
+    shutdown: false # keep the host down or reboot it
