--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,32 @@
 version: 2.1
 
 commands:
+  go_save_cache:
+    description: "Save $GOHOME directory into the cache for the actual revision"
+    steps:
+      - save_cache:
+          key: env-{{ .Revision }}
+          paths:
+            - /go
+            - /usr/local/bin/golangci-lint
+            - /usr/local/kubebuilder
+  go_restore_cache:
+    description: "Restore golang cache"
+    steps:
+      - restore_cache:
+          key: env-{{ .Revision }}
+  python_install_requirements:
+    description: "Install requirements in requirements.txt using pip"
+    steps:
+      - run:
+          name: Install Python requirements
+          command: pip3 install -r tasks/requirements.txt
+  alpine_install_git:
+    description: "Install git using alpine apk"
+    steps:
+      - run:
+          name: Install git
+          command: apk update && apk add git
   check_changed_files:
     description: "Ensures at least one file matching the given pattern has been changed"
     parameters:
@@ -21,29 +47,9 @@ commands:
             git diff master --name-only | egrep -q '<< parameters.pattern >>'
 
 templates:
-  # saves go code, modules and tools in the cache
-  save_cache: &save_cache
-    key: env-{{ .Revision }}
-    paths:
-      - /go
-      - /usr/local/bin/golangci-lint
-      - /usr/local/kubebuilder
-  # restores the cache
-  restore_cache: &restore_cache
-    key: env-{{ .Revision }}
   # sets the working directory to the project path
   working_directory: &working_directory
     working_directory: /go/src/github.com/DataDog/chaos-fi-controller
-  # install requirements used for the CI tasks
-  install_python_requirements: &install_python_requirements
-    run:
-      name: Install Python requirements
-      command: pip3 install -r tasks/requirements.txt
-  # install git on an alpine distribution
-  install_git_alpine: &install_git_alpine
-    run:
-      name: Install git
-      command: apk update && apk add git
 
 executors:
   golang:
@@ -90,12 +96,12 @@ jobs:
       - run:
           name: Cache local dependencies
           command: go mod download
-      - save_cache: *save_cache
+      - go_save_cache
   # ensures that Go dependencies are up-to-date
   dependencies:
     executor: golang
     steps:
-      - restore_cache: *restore_cache
+      - go_restore_cache
       - run:
           name: Ensure dependencies are up-to-date
           command: |
@@ -105,32 +111,32 @@ jobs:
   vet:
     executor: golang
     steps:
-      - restore_cache: *restore_cache
+      - go_restore_cache
       - run: make vet
   # formats the code to ensure it complies with Go standards
   fmt:
     executor: golang
     steps:
-      - restore_cache: *restore_cache
+      - go_restore_cache
       - run: make fmt
   # runs the golangci-lint linters
   lint:
     executor: golang
     steps:
-      - restore_cache: *restore_cache
+      - go_restore_cache
       - run: make lint
   # runs the tests
   test:
     executor: golang
     steps:
-      - restore_cache: *restore_cache
+      - go_restore_cache
       - run: make test
   # ensures that the file containing 3rd-party licenses is up-to-date
   third-party-licenses:
     executor: python
     steps:
       - checkout
-      - *install_python_requirements
+      - python_install_requirements
       - run:
           name: Ensure 3rd-party licences are up-to-date
           command: python3 tasks/3rdparty.py
@@ -146,7 +152,7 @@ jobs:
     executor: bash
     steps:
       - checkout
-      - *install_git_alpine
+      - alpine_install_git
       - check_changed_files:
           pattern: ^CHANGELOG.md$
 
