--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -11,7 +11,7 @@ namespace: default
 # "wordpress" becomes "alices-wordpress".
 # Note that it should also match with the prefix (text before '-') of the namespace
 # field above.
-namePrefix: chaos-fi-controller-
+namePrefix: chaos-controller-
 
 # Labels to add to all resources and selectors.
 #commonLabels:
