--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -9,5 +9,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: chaos-fi-controller
+  newName: chaos-controller
   newTag: latest
