--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -80,7 +80,7 @@ release-injector-ref:
     - tags
   variables:
     TARGET: "injector"
-    IMAGE: "chaos-fi"
+    IMAGE: "chaos-injector"
     TAG: "${CI_COMMIT_REF_SLUG}-${CI_COMMIT_SHORT_SHA}"
 
 release-injector-tag:
@@ -90,5 +90,5 @@ release-injector-tag:
     - tags
   variables:
     TARGET: "injector"
-    IMAGE: "chaos-fi"
+    IMAGE: "chaos-injector"
     TAG: "${CI_COMMIT_TAG}"
