--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,15 +25,15 @@ ci-image:
   when: manual
   except: [tags, schedules]
   script:
-    - docker build --tag 486234852809.dkr.ecr.us-east-1.amazonaws.com/ci/chaos-fi-controller:$CURRENT_CI_IMAGE ci
-    - docker push 486234852809.dkr.ecr.us-east-1.amazonaws.com/ci/chaos-fi-controller:$CURRENT_CI_IMAGE
+    - docker build --tag 486234852809.dkr.ecr.us-east-1.amazonaws.com/ci/chaos-controller:$CURRENT_CI_IMAGE ci
+    - docker push 486234852809.dkr.ecr.us-east-1.amazonaws.com/ci/chaos-controller:$CURRENT_CI_IMAGE
 
 # main
 .common: &common
   tags:
     - "runner:main"
     - "size:large"
-  image: 486234852809.dkr.ecr.us-east-1.amazonaws.com/ci/chaos-fi-controller:$CURRENT_CI_IMAGE
+  image: 486234852809.dkr.ecr.us-east-1.amazonaws.com/ci/chaos-controller:$CURRENT_CI_IMAGE
 
 build:make:
   <<: *common
@@ -60,7 +60,7 @@ release-manager-ref:
     - tags
   variables:
     TARGET: "manager"
-    IMAGE: "chaos-fi-controller"
+    IMAGE: "chaos-controller"
     TAG: "${CI_COMMIT_REF_SLUG}-${CI_COMMIT_SHORT_SHA}"
 
 release-manager-tag:
@@ -70,7 +70,7 @@ release-manager-tag:
     - tags
   variables:
     TARGET: "manager"
-    IMAGE: "chaos-fi-controller"
+    IMAGE: "chaos-controller"
     TAG: "${CI_COMMIT_TAG}"
 
 release-injector-ref:
@@ -80,7 +80,7 @@ release-injector-ref:
     - tags
   variables:
     TARGET: "injector"
-    IMAGE: "chaos-fi"
+    IMAGE: "chaos-injector"
     TAG: "${CI_COMMIT_REF_SLUG}-${CI_COMMIT_SHORT_SHA}"
 
 release-injector-tag:
@@ -90,5 +90,5 @@ release-injector-tag:
     - tags
   variables:
     TARGET: "injector"
-    IMAGE: "chaos-fi"
+    IMAGE: "chaos-injector"
     TAG: "${CI_COMMIT_TAG}"
