--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -137,6 +137,7 @@ jobs:
     steps:
       - checkout
       - python_install_requirements
+      - alpine_install_git
       - run:
           name: Ensure 3rd-party licences are up-to-date
           command: python3 tasks/3rdparty.py
