--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -137,9 +137,11 @@ jobs:
     steps:
       - checkout
       - python_install_requirements
+      - alpine_install_git
       - run:
           name: Ensure 3rd-party licences are up-to-date
           command: python3 tasks/3rdparty.py
+      - run: git diff --exit-code
   # ensures that the license header is present on all the needed files
   license-header:
     executor: bash
