--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,7 +139,7 @@ jobs:
       - python_install_requirements
       - alpine_install_git
       - run:
-          name: Ensure 3rd-party licences are up-to-date
+          name: Ensure 3rd-party licenses are up-to-date
           command: python3 tasks/3rdparty.py
       - run: git diff --exit-code
   # ensures that the license header is present on all the needed files
