introduce invoke as task manager

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,12 +144,13 @@ jobs:
       - run: git diff --exit-code
   # ensures that the license header is present on all the needed files
   license-header:
-    executor: bash
+    executor: python
     steps:
       - checkout
+      - python_install_requirements
       - run:
           name: Ensure license header is present
-          command: ./tasks/header.sh
+          command: inv header-check
   changelog:
     executor: bash
     steps:
