--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -140,7 +140,7 @@ jobs:
       - alpine_install_git
       - run:
           name: Ensure 3rd-party licenses are up-to-date
-          command: python3 tasks/3rdparty.py
+          command: inv license-check
       - run: git diff --exit-code
   # ensures that the license header is present on all the needed files
   license-header:
