--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -53,6 +53,6 @@ spec:
           configMap:
             name: config
             items:
-              - key: pod-template.yaml
-                path: pod-template.yaml
+              - key: pod-template.json
+                path: pod-template.json
       terminationGracePeriodSeconds: 10
