--- a/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
+++ b/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
@@ -48,10 +48,13 @@ spec:
                   type: array
                 port:
                   type: integer
+                probability:
+                  type: integer
                 protocol:
                   type: string
               required:
               - port
+              - probability
               - protocol
               type: object
             networkLatency:
