Do not push tags on docker hub automatically for now

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -144,7 +144,7 @@ release-docker-hub-ref:
 
 release-docker-hub-tag:
   <<: *release-docker-hub
-  when: always
+  when: manual
   only:
     - tags
   variables:
