--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,8 +12,8 @@ variables:
 stages:
   - ci-image
   - build
-  - release-internal
-  - release-external
+  - pre-release
+  - release
 
 # CI image
 .docker-runner: &docker-runner
@@ -45,81 +45,69 @@ build:make:
   script:
     - make
 
-# release
-.release: &release
+# meta-release
+# release image and common stuff
+.meta-release: &meta-release
   <<: *common
   tags:
     - "runner:docker"
     - "size:large"
-  image: 486234852809.dkr.ecr.us-east-1.amazonaws.com/docker-push:v2223910-e97a88c-1.0.0
-  stage: release-internal
+  image: 486234852809.dkr.ecr.us-east-1.amazonaws.com/docker-push:v2287090-e1d6fd6-1.1.0
+
+# pre-release
+# build the target from the local Dockerfile and push it to
+# AWS staging registry
+.pre-release: &pre-release
+  <<: *meta-release
+  stage: pre-release
   script:
-    - release.sh -t=$TARGET -e=$ENVIRONMENT $IMAGE_NAME $IMAGE_TAG
+    - release.sh --build-from=./Dockerfile --build-target=manager 727006795293.dkr.ecr.us-east-1.amazonaws.com/${CONTROLLER_IMAGE_NAME} ${TAG}
+    - release.sh --build-from=./Dockerfile --build-target=injector 727006795293.dkr.ecr.us-east-1.amazonaws.com/${INJECTOR_IMAGE_NAME} ${TAG}
 
-release-manager-ref:
-  <<: *release
+# pre-release-ref
+# build a reference image tag for controller and injector
+pre-release-ref:
+  <<: *pre-release
   when: manual
   except:
     - tags
   variables:
-    IMAGE_NAME: "${CONTROLLER_IMAGE_NAME}"
-    IMAGE_TAG: "${CI_COMMIT_REF_SLUG}-${CI_COMMIT_SHORT_SHA}"
-    TARGET: "manager"
-    ENVIRONMENT: "staging"
+    TAG: "${CI_COMMIT_REF_SLUG}-${CI_COMMIT_SHORT_SHA}"
 
-.release-manager-tag:
-  <<: *release
+# pre-release-tag
+# build a tag image tag for controller and injector
+pre-release-tag:
+  <<: *pre-release
   when: always
   only:
     - tags
   variables:
-    IMAGE_NAME: "${CONTROLLER_IMAGE_NAME}"
-    IMAGE_TAG: "${CI_COMMIT_TAG}"
-    TARGET: "manager"
+    TAG: "${CI_COMMIT_TAG}"
 
-release-manager-tag-staging:
-  extends: .release-manager-tag
-  variables:
-    ENVIRONMENT: "staging"
-
-release-manager-tag-prod:
-  extends: .release-manager-tag
-  variables:
-    ENVIRONMENT: "prod"
-
-release-injector-ref:
-  <<: *release
-  when: manual
-  except:
-    - tags
-  variables:
-    IMAGE_NAME: "${INJECTOR_IMAGE_NAME}"
-    IMAGE_TAG: "${CI_COMMIT_REF_SLUG}-${CI_COMMIT_SHORT_SHA}"
-    TARGET: "injector"
-    ENVIRONMENT: "staging"
-
-.release-injector-tag:
-  <<: *release
+# release
+.release: &release
+  <<: *meta-release
+  stage: release
   when: always
   only:
     - tags
-  variables:
-    IMAGE_NAME: "${INJECTOR_IMAGE_NAME}"
-    IMAGE_TAG: "${CI_COMMIT_TAG}"
-    TARGET: "injector"
+  script:
+    - release.sh --pull-from=727006795293.dkr.ecr.us-east-1.amazonaws.com/${IMAGE} eu.gcr.io/datadog-staging/${IMAGE} ${CI_COMMIT_TAG}
+    - release.sh --pull-from=727006795293.dkr.ecr.us-east-1.amazonaws.com/${IMAGE} eu.gcr.io/datadog-prod/${IMAGE} ${CI_COMMIT_TAG}
+    - release.sh --pull-from=727006795293.dkr.ecr.us-east-1.amazonaws.com/${IMAGE} 464622532012.dkr.ecr.us-east-1.amazonaws.com/${IMAGE} ${CI_COMMIT_TAG}
 
-release-injector-tag-staging:
-  extends: .release-injector-tag
+release-controller:
+  <<: *release
   variables:
-    ENVIRONMENT: "staging"
+    IMAGE: "${CONTROLLER_IMAGE_NAME}"
 
-release-injector-tag-prod:
-  extends: .release-injector-tag
+release-injector:
+  <<: *release
   variables:
-    ENVIRONMENT: "prod"
+    IMAGE: "${INJECTOR_IMAGE_NAME}"
 
 .release-docker-hub: &release-docker-hub
-  stage: release-external
+  stage: release
   tags: [ "runner:docker", "size:large" ]
   image: 486234852809.dkr.ecr.us-east-1.amazonaws.com/docker-notary:v1912023-8c8dc1c-0.6.1
   before_script:
