--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,3 +47,9 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: release_changelog_${{ github.ref }}
+      - name: Open changelog pull request
+        uses: vsoch/pull-request-action@1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PULL_REQUEST_FROM_BRANCH: release_changelog_${{ github.ref }}
