Allow connection establishment before drop in network failure

--- a/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
+++ b/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
@@ -42,6 +42,8 @@ spec:
               description: NetworkFailureSpec represents a network failure injection
               nullable: true
               properties:
+                allowEstablishment:
+                  type: boolean
                 hosts:
                   items:
                     type: string
