--- a/config/samples/chaos_v1beta1_disruption.yaml
+++ b/config/samples/chaos_v1beta1_disruption.yaml
@@ -23,5 +23,6 @@ spec:
     delay: 1000 # delay in ms
     hosts: # destination hosts to add latency to
       - 10.0.0.0/8
+    port: 80 # port to apply latency  (optional)
   nodeFailure: # node kernel panic or shutdown
     shutdown: true # shutdown the host instead of triggering a stack dump
