api: Add a maximum value for networkLatency.delay
tc has a maximum latency value of 60000ms (excluded). This adds the
corresponding validation to the api to enforce it

When trying to apply a config with a delay of 1000000ms:
```
$ kubectl apply -f config/samples/chaos_v1beta1_disruption.yaml
The Disruption "disruption-sample" is invalid: spec.networkLatency.delay: Invalid value: 59999: spec.networkLatency.delay in body should be less than or equal to 59999
```

--- a/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
+++ b/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
@@ -65,6 +65,7 @@ spec:
               nullable: true
               properties:
                 delay:
+                  maximum: 59999
                   type: integer
                 hosts:
                   items:
