--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
       - command:
-        - /manager
+        - /usr/local/bin/manager
         args:
         - --enable-leader-election
         image: controller:latest
